--- a/Mukul/tripville/src/main/webapp/WEB-INF/web.xml
+++ b/Mukul/tripville/src/main/webapp/WEB-INF/web.xml
@@ -25,4 +25,13 @@
             </listener-class>
   </listener>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>/faces/*</url-pattern>
+  </servlet-mapping>
 </web-app>
